--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                 <a href="#" class="nav-link"> Home </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link"> About </a>
+                <a href="#about" class="nav-link"> About </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link"> Menu </a>
+                <a href="#menu" class="nav-link"> Menu </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link"> Testimonial </a>
+                <a href="#testimonials" class="nav-link"> Testimonials </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link"> Gallery </a>
+                <a href="#gallery" class="nav-link"> Gallery </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link"> Contact </a>
+                <a href="#contact" class="nav-link"> Contact </a>
             </li>
 
         </ul>
@@ -60,7 +60,7 @@
        </div>
     </section>
     <!--About section-->
-    <section class="about-section">
+    <section class="about-section" id="about">
         <div class= "section-content">
             <div class="about-image-wrapper">
               <img src="images/about-image.jpg" alt="About"  class="about-image">
@@ -78,7 +78,7 @@
         </div>
     </section>
     <!--Menu section-->
-    <section class="menu-section">
+    <section class="menu-section" id="menu">
         <h2 class="section-title"> Our Menu</h2>
         <div class="section-content">
             <ul class="menu-list">
@@ -113,6 +113,83 @@
             </ul>
         </div>
     </section>
+    <!--Gallery Section-->
+    <section class="gallery-section" id="gallery">
+        <h2 class="section-title">Gallery</h2>
+        <div class="section-content">
+            <ul class="gallery-list">
+                <li class="gallery-item">
+                    <img src="images/gallery-1.jpg" alt="Gallery" 
+                    class="gallery-image">
+                </li>
+                <li class="gallery-item">
+                    <img src="images/gallery-6.jpg" alt="Gallery" 
+                    class="gallery-image">
+                </li>
+                <li class="gallery-item">
+                    <img src="images/gallery-3.jpg" alt="Gallery" 
+                    class="gallery-image">
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!--Contact section-->
+    <section class="contact-section" id="contact">
+        <h2 class="section-title">Contact Us</h2>
+        <div class="section-content">
+            <ul class="contact-info-list">
+                <li class="contact-info">
+                    <i class="fa-solid fa-location-crosshairs"></i>
+                    <p>ABC Avenue, Wilderness, Tx 75075 </p>
+                </li>
+                <li class="contact-info">
+                    <i class="fa-regular fa-envelope"></i>
+                    <p>info@coffeshopweb.com </p>
+                </li>
+                <li class="contact-info">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>(123) 456 7890 </p>
+                </li>
+                <li class="contact-info">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>Monday - Friday: 9:00AM - 7:00PM </p>
+                </li>
+                <li class="contact-info">
+                    <i class="fa-regular fa-clock"></i>
+                    <p>Sunday: Closed</p>
+                </li>
+                <li class="contact-info">
+                    <i class="fa-solid fa-globe"></i>
+                    <p>www.coffeshopweb com </p>
+                </li>
+            </ul>
+            <form action="#" class="contact-form">
+                <input type="text" placeholder="Your name" class="form-input" required>
+                <input type="text" placeholder="Your email" class="form-input" required>
+                <textarea  placeholder="Your message" class="form-input" 
+                required></textarea>
+                <button class="submit-button"> Submit</button>
+
+            </form>
+        </div>
+
+    </section>
+    <!--Footer Section-->
+    <footer class="footer-section">
+        <div class="section-content">
+            <p class="copyright-text"> &COPY 2025 Coffee Shop</p>
+            <div class="social-link-list">
+                <a href="#" class="social-link"> <i class="fa-brands fa-facebook"></i></a>
+                <a href="#" class="social-link"> <i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="social-link"> <i class="fa-brands fa-x-twitter"></i></a>
+            </div>
+            <p class="policy-text">
+                <a href="#" class="policy-link">Privacy Policy</a>
+                <span class="separator">*</span>
+                <a href="#" class="policy-link"> Refund Policy</a>
+            </p>
+        </div>
+    </footer>
     </main>
     <script src="script.js">
 
